--- a/app/src/main/res/values/signature.xml
+++ b/app/src/main/res/values/signature.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--<string name="metaioSDKSignature">jfyNFXmImfsYs1RJrXlhyUXNJ+9Gci0JuAbQ4yMu5OM=</string>-->
+    <string name="metaioSDKSignature">jfyNFXmImfsYs1RJrXlhyUXNJ+9Gci0JuAbQ4yMu5OM=</string>
 </resources>
