--- a/app/src/main/res/layout/activity_webquest.xml
+++ b/app/src/main/res/layout/activity_webquest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<mobi.tarantino.arfigure.CustomSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swiperefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -57,4 +57,4 @@
             android:text="New Button" />
 
     </FrameLayout>
-</android.support.v4.widget.SwipeRefreshLayout>
+</mobi.tarantino.arfigure.CustomSwipeRefreshLayout>
